# ConvolutedProofs

./: .mcp.json  CLAUDE.md  ConvolutedProofs.lean  LICENSE  MCP_SETUP.md  README.md  SqrtDirichlet.lean  Typeclassdemo.lean  lake-manifest.json  lakefile.toml  test_leantool.py  test_leantool_direct.py
.claude/agents/: cardinal-arithmetic.md  lean-proof-repair.md  proof-strategy.md  topology-continuity.md  ultrafilter-model-theory.md
.mcp/: config.json  package-lock.json  package.json  server.js
ConvolutedProofs/Carleson/: CarlesonHunt.lean
LeanTool/: CLAUDE.md  README.md  lean-api-server-flask.py  leanmcp.py  leantool.py  pyproject.toml  workflows.py
LeanTool/.github/: FUNDING.yml
LeanTool/LeanTool/PyPantograph/src/Pantograph/: Serial.lean  Version.lean
LeanTool/LeanTool/PyPantograph/src/Pantograph/Frontend/: MetaTranslate.lean
LeanTool/LeanTool/PyPantograph/src/Test/: Frontend.lean  Main.lean  Serial.lean
LeanTool/examples/: pabc_claude.lean
SqrtDirichlet/: UltraConvoluted.lean
