[tool.poetry]
name = "leantool"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.71.0"
streamlit = "^1.40.1"
jsonlines = "^4.0.0"
flask = "^3.1.0"
pantograph = { file = "LeanTool/PyPantograph/dist/pantograph-0.3.4-cp312-cp312-macosx_26_0_arm64.whl" }
mcp = {extras = ["cli"], version = "^1.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
